reuse translations of some admin_guide

--- a/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
@@ -1,51 +1,51 @@
 ---
-title: Advices and guidelines
+title: Hinweise und Leitlinien
 ---
 
-This page lists some advice and guidelines which every YunoHost administrator should be aware to take care of a YunoHost server :)
+Diese Seite listet einige Tipps und Richtlinien auf, die jeder YunoHost-Administrator kennen sollte, um sich um seinen Server zu kümmern :).
 
-## Do not break YunoHost
+## YunoHost nicht beschädigen
 
-To put it another way: your server is either a production server (meant to work) or a test server on which you allow yourself to experiment.
+Das heißt : Entweder ist der Server für den tatsächlichen Betrieb gedacht, oder es handelt sich um einen Testserver, auf dem Sie experimentieren dürfen.
 
-If your goal is to run a production server:
+Ist Ihr Ziel, einen Produktionserver zu benutzen, so beachten Sie folgendes :
 
-- be aware that servers are fragile system. Stay cautious, methodical and patient;
-- limit experimentations and customizations (for instance of config file);
-- do not install dozens of apps just to see how they look;
-- use non-official apps with caution, and do not use apps that are still 'in progress', 'not working' or level 0;
-- if something gets broken, think twice about fixing it by yourself if you don't know what you are doing. <small>(For instance, do not attempt to recreate yourself the admin user just because it mysteriously disappeared...)</small>
+- ein Server ist ein empfindliches System : Seien Sie vorsichtig, methodisch und geduldig ;
+- experimentieren und Anpassen einschränken - insbesondere von Konfigurationsdateien ;
+- Nicht zahlreiche Anwendungen installieren, nur um zu sehen, wie sie aussehen ;
+- Vorsicht mit inoffiziellen Anwendungen, und verzichten auf solche, die noch "in Bearbeitung" sind, oder einen Level 0 haben ;
+- wenn etwas kaputt geht, überlegen Sie richtig, bevor Sie versuchen, es selbst zu reparieren, wenn Sie nicht wissen, was Sie tun. <small>(z. B., den Admin-Benutzer nicht selbst versuchen neu anzulegen, falls er komischerweise verschwunden ist.)</small>
 
-## Keep it simple!
+## Keep it simple !
 
-YunoHost is designed to work with general and simple use cases in mind. Deviating from those conditions will make things harder and you will need technical knowledge to make it work. For instance:
+YunoHost ist für allgemeine und einfache Anwendungsfälle konzipiert. Wenn Sie von diesen Bedingungen abweichen, wird es schwieriger, und Sie benötigen technisches Wissen, um sie zu erfüllen. Zum Beispiel:
 
-- do not try to run YunoHost in a context where you cannot have control over ports 80 and 443 (or no internet at all);
-- do not try to host five servers behind the same internet connection if you are not already an advanced user;
-- do not fall into nerd whims such as willing to replace NGINX with Apache (or run both at the same time);
-- do not try to use custom SSL certificates if you don't really need them;
+- Versuchen Sie nicht, YunoHost in einem Kontext auszuführen, in dem Sie keine Kontrolle über die Ports 80 und 443 haben (oder überhaupt kein Internet);
+- Versuchen Sie nicht, fünf Server über dieselbe Internetverbindung zu hosten, wenn Sie nicht bereits ein fortgeschrittener Benutzer sind;
+- Auf keinen Fall sollten Sie versuchen, NGINX durch Apache zu ersetzen (oder beides gleichzeitig laufen zu lassen);
+- Versuchen Sie nicht, benutzerdefinierte SSL-Zertifikate zu verwenden, wenn Sie diese nicht wirklich benötigen;
 - ...
 
-Keep things as simple as you can!
+Halten Sie die Dinge so einfach wie möglich!
 
-## Do not reinstall every day
+## Das System soll nicht ständig wieder installiert werden
 
-Some people tend to fall into "the reinstallation spiral" - where each time something breaks in the server and it is not obvious how to fix it, or because the server became "dirty", one ends up reinstalling the whole server from scratch because it looks like an "easy" and quick solution to clean the table.
+Manche Leute neigen dazu, in eine "Neuinstallationsspirale" zu verfallen - wo immer, wenn etwas im Server kaputt geht und es nicht offensichtlich ist, wie man es beheben kann, oder weil der Server instabil geworden ist, der Administrator damit endet, den gesamten Server von Grund auf neu zu installieren, weil es als ein "einfacher" und schneller Weg erscheint, alles wieder in Ordnung zu bringen.
 
-Please don't do this. Reinstalling is a heavy operation and is not a good long-term strategy for fixing problems. You will get tired and won't learn anything. Forget the dream of having a "clean" server. A real-life server always end up being a bit "dirty". Also, you need to (progressively) learn how to solve issues when you encounter them. Reach for [help](/community/help) with detailed symptoms of what you are trying to do and what is happening, and fix the issues. Over time, you will get a much better control over your server than just blindly reinstalling every time.
+Vermeiden Sie das. Eine neue Installation ist mühsam und keine gute langfristige Strategie zur Problemlösung. Sie werden nur müde und lernen nichts dabei. Vergessen Sie den Traum von einem einwandfreien Server: Im Betrieb wird ein Server nach und nach immer instabil. Außerdem müssen Sie (allmählich) lernen, Probleme zu lösen, wenn Sie auf welche stoßen. [Bitten Sie um Hilfe](/community/help), geben Sie Details über die entsprechenden Probleme an und was Sie versuchen dagegen zu unternehmen. Beheben Sie dann die Probleme. Mit der Zeit werden Sie eine viel bessere Kontrolle über Ihren Server haben. Und im Gegensatz zu ständigen Neu-Installationen ist das ein großer Vorteil.
 
-## Do backups
+## Backups erstellen
 
-If you host services and data that are important for your users, it is important that you setup a backup policy. Backups can be easily created from the webadmin - you can download it from the webadmin or via your favorite FTP client, such as FileZilla or your own terminal. You should perform backup regularly and keep them in a safe and different physical location from your server. More info on [the backup documentation](/category/backups).
+Wenn Sie Dienste und Daten hosten, die für Ihre Benutzer wichtig sind, ist es wichtig, dass Sie über eine Sicherungsrichtlinie verfügen. Backups können einfach über die Webadministrationsoberfläche erstellt werden - allerdings können sie derzeit nicht von dort heruntergeladen werden (aber sie können auf anderem Wege heruntergeladen werden). Sie sollten regelmäßig Backups erstellen und diese an einem sicheren Ort aufbewahren, der physisch von Ihrem Server getrennt ist. Weitere Informationen finden Sie in [der Backup-Dokumentation](/category/backup).
 
-## Check root’s email
+## Die an Root gesendeten Emails lesen
 
-As an administrator, you should configure an email client to check emails sent to `root@your.domain.tld` (which should be an alias to the first user your added) or otherwise forward them to another address that you actively check. Those mails may contain information on what is happening on your server such as automated periodic tasks.
+Als Administrator sollten Sie einen E-Mail-Client so einrichten, dass er E-Mails prüft, die an `root@your.domain.tld` (das muss ein Alias für den ersten von Ihnen hinzugefügten Benutzer sein) gesendet werden, oder sie an eine andere Adresse weiterleitet, die Sie aktiv prüfen. Diese E-Mails können Informationen darüber enthalten, was auf Ihrem Server passiert, wie z. B. periodische automatisierte Aufgaben.
 
-## YunoHost is free software, maintained by volunteers
+## YunoHost ist freie Software, die von Freiwilligen instand gehalten wird
 
-Finally, keep in mind that YunoHost is a free software maintained by volunteers - and that the goal of YunoHost (to democratize self-hosting) is not an easy one! It is provided without any warranty. The team of volunteers does its best to maintain and provide the best possible experience - yet features, applications and YunoHost as a whole are far from being perfect and you will experience small and big shortcomings at some points. When this happens, kindly [reach for help on the chat or forum, or report the issue](/community/help)! :)
+Schließlich sollten Sie bedenken, dass YunoHost eine freie Software ist, die von Freiwilligen gepflegt wird - und dass das Ziel von YunoHost (die Demokratisierung des Selbst-Hostings) nicht einfach ist! Die Software wird ohne jegliche Garantie zur Verfügung gestellt. Das YunoHost Team tut sein Bestes, um das bestmögliche Erlebnis zu erhalten und zu bieten - dennoch sind die Funktionen, Anwendungen und YunoHost als Ganzes weit davon entfernt, perfekt zu sein, und Sie werden früher oder später auf kleine oder große Probleme stoßen. Wenn das passiert, kommen Sie bitte [in den Chat oder das Forum und bitten um Hilfe, oder melden das Problem](/community/help) :)!
 
-If you like YunoHost and want to see the project being kept alive and make progress, feel free to leave a thank you note and to [donate](https://liberapay.com/YunoHost) to the project and talk about it around you!
+Wenn Ihnen YunoHost gefällt und Sie möchten, dass das Projekt am Leben erhalten wird und weiter voranschreitet, hinterlassen Sie bitte eine Dankesnachricht und [spenden](https://liberapay.com/YunoHost) für das Projekt und erzählen Sie anderen davon!
 
-Last but not least, since YunoHost is a free software project, you are legitimate and welcomed to come and [contribute](/contribute/) to the project, be it on the technical aspects (i.e. code) and less-technical aspects (such as contributing to this documentation! ;))
+Und da YunoHost schließlich ein Open-Source-Projekt ist, sind Sie herzlich dazu eingeladen, zum Projekt [beizutragen](/contribute). Sowohl zu technischen (d.h. Code) als auch zu weniger technischen Aspekten (wie z.B. das Mitwirken an dieser Dokumentation ;) )!
