--- a/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
@@ -2,10 +2,10 @@
 title: Administrator web interface
 ---
 
-YunoHost has an administrator web interface. The other way to administrate your YunoHost install is through the [command line](/administer/admin_guide/command_line).
+YunoHost hat ein Administrator-Webinterface. Die andere Möglichkeit, Ihre YunoHost-Installation zu administrieren, ist über die [Kommandozeile](/commandline).
 
-## Access
+### Zugang
 
-You can access your administrator web interface at this address: `https://example.org/yunohost/admin` (replace `example.org` with your own domain name)
+Sie können auf Ihr Administrator-Webinterface unter folgender Adresse zugreifen: `https://example.org/yunohost/admin` (ersetzen Sie `example.org` durch Ihren eigenen Domainnamen)
 
 ![Webadmin screenshot](/img/webadmin.jpg)
