--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
@@ -2,10 +2,10 @@
 title: Administrator web interface
 ---
 
-YunoHost has an administrator web interface. The other way to administrate your YunoHost install is through the [command line](/administer/admin_guide/command_line).
+YunoHost est fourni avec une interface graphique d’administration (aussi appelée webadmin). L’autre méthode d'administration est d’utiliser la [ligne de commande](/commandline).
 
-## Access
+### Accès
 
-You can access your administrator web interface at this address: `https://example.org/yunohost/admin` (replace `example.org` with your own domain name)
+L’interface d'administration web est accessible depuis votre instance YunoHost à l’adresse `https://exemple.org/yunohost/admin` (remplacez `exemple.org` par la bonne valeur)
 
 ![Webadmin screenshot](/img/webadmin.jpg)
