--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
@@ -2,10 +2,10 @@
 title: Administrator web interface
 ---
 
-YunoHost has an administrator web interface. The other way to administrate your YunoHost install is through the [command line](/administer/admin_guide/command_line).
+YunoHost ha un'interfaccia web di amministrazione. L'altro metodo è quello di usare la [linea di comando](/commandline).
 
-## Access
+### Accesso
 
-You can access your administrator web interface at this address: `https://example.org/yunohost/admin` (replace `example.org` with your own domain name)
+L'interfaccia di amministrazione è accessibile all'indirizzo `https://example.org/yunohost/admin` (sostituisci `example.org` con il tuo dominio)
 
 ![Webadmin screenshot](/img/webadmin.jpg)
