--- a/i18n/es/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
@@ -2,10 +2,10 @@
 title: Administrator web interface
 ---
 
-YunoHost has an administrator web interface. The other way to administrate your YunoHost install is through the [command line](/administer/admin_guide/command_line).
+YunoHost tiene una interfaz gráfica de administración. El otro método consiste en utilizar la [linea de comando](/commandline).
 
-## Access
+### Acceso
 
-You can access your administrator web interface at this address: `https://example.org/yunohost/admin` (replace `example.org` with your own domain name)
+La interfaz admin está accesible desde tu instancia YunoHost en esta dirección : `https://ejemplo.org/yunohost/admin` (reemplaza `ejemplo.org` por tu nombre de dominio)
 
 ![Webadmin screenshot](/img/webadmin.jpg)
