--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
@@ -2,50 +2,50 @@
 title: Conseils et lignes directrices
 ---
 
-This page lists some advice and guidelines which every YunoHost administrator should be aware to take care of a YunoHost server :)
+Cette page énumère quelques conseils et lignes directrices que tout administrateur de YunoHost devrait connaître pour prendre soin de son serveur :).
 
-## Do not break YunoHost
+## Ne cassez pas YunoHost
 
-To put it another way: your server is either a production server (meant to work) or a test server on which you allow yourself to experiment.
+En d'autres termes : votre serveur est soit un « serveur de production » (destiné à fonctionner), soit un serveur de test sur lequel vous vous permettez d'expérimenter.
 
-If your goal is to run a production server:
+Si votre but est d'avoir un serveur de production :
 
-- be aware that servers are fragile system. Stay cautious, methodical and patient;
-- limit experimentations and customizations (for instance of config file);
-- do not install dozens of apps just to see how they look;
-- use non-official apps with caution, and do not use apps that are still 'in progress', 'not working' or level 0;
-- if something gets broken, think twice about fixing it by yourself if you don't know what you are doing. <small>(For instance, do not attempt to recreate yourself the admin user just because it mysteriously disappeared...)</small>
+- soyez conscient qu'un serveur est un système fragile : restez prudent, méthodique et patient ;
+- limitez les expérimentations et la personnalisation - notamment des fichiers de config ;
+- n'installez pas des douzaines d'applications juste pour voir de quoi elles ont l'air ;
+- utilisez les applications non-officielles avec prudence, et interdisez-vous d'utiliser celles marquées 'in progress', 'not working' ou qui sont en niveau 0 ;
+- si quelque chose casse, réfléchissez à deux fois avant de tenter de le réparer vous-même si vous ne savez pas ce que vous faites. <small>(Par exemple, n'essayez pas de recréer vous-même l'utilisateur admin juste parce qu'il a mystérieusement disparu...)</small>
 
-## Keep it simple!
+## Restez simple !
 
-YunoHost is designed to work with general and simple use cases in mind. Deviating from those conditions will make things harder and you will need technical knowledge to make it work. For instance:
+YunoHost est conçu pour fonctionner avec des cas d'utilisation généraux et simples. S'écarter de ces conditions rendra les choses plus difficiles et vous aurez besoin de connaissances techniques pour les faire fonctionner. Par exemple :
 
-- do not try to run YunoHost in a context where you cannot have control over ports 80 and 443 (or no internet at all);
-- do not try to host five servers behind the same internet connection if you are not already an advanced user;
-- do not fall into nerd whims such as willing to replace NGINX with Apache (or run both at the same time);
-- do not try to use custom SSL certificates if you don't really need them;
+- n'essayez pas d'exécuter YunoHost dans un contexte où vous ne pouvez pas avoir le contrôle des ports 80 et 443 (ou pas d'Internet du tout) ;
+- n'essayez pas d'héberger cinq serveurs derrière la même connexion Internet si vous n'êtes pas déjà un utilisateur avancé ;
+- ne vous tourmentez pas à vouloir remplacer NGINX par Apache (ou faire tourner les deux à la fois) ;
+- n'essayez pas d'utiliser des certificats SSL personnalisés si vous n'en avez pas vraiment besoin ;
 - ...
 
-Keep things as simple as you can!
+Gardez les choses aussi simples que possible !
 
-## Do not reinstall every day
+## Ne réinstallez pas tous les jours
 
-Some people tend to fall into "the reinstallation spiral" - where each time something breaks in the server and it is not obvious how to fix it, or because the server became "dirty", one ends up reinstalling the whole server from scratch because it looks like an "easy" and quick solution to clean the table.
+Certaines personnes ont tendance à tomber dans la "spirale de la réinstallation" - où chaque fois que quelque chose casse dans le serveur et qu'il n'est pas évident de le réparer, ou parce que le serveur est devenu instable, l'administrateur finit par réinstaller le serveur entier à partir de zéro car cela semble une solution "facile" et rapide pour remettre les choses à plat.
 
-Please don't do this. Reinstalling is a heavy operation and is not a good long-term strategy for fixing problems. You will get tired and won't learn anything. Forget the dream of having a "clean" server. A real-life server always end up being a bit "dirty". Also, you need to (progressively) learn how to solve issues when you encounter them. Reach for [help](/community/help) with detailed symptoms of what you are trying to do and what is happening, and fix the issues. Over time, you will get a much better control over your server than just blindly reinstalling every time.
+Ne faites pas ça. La réinstallation est une opération lourde et n'est pas une bonne stratégie à long terme pour résoudre les problèmes. Vous vous fatiguerez et n'apprendrez rien. Oubliez le rêve d'avoir un serveur infaillible : un serveur utilisé quotidiennement finit toujours par être instable. De plus, vous devez apprendre (progressivement) à résoudre les problèmes lorsque vous les rencontrez. [Demandez de l'aide](/community/help) en fournissant des détails sur les symptômes, ce que vous essayez de faire et ce qu'il se passe, et corrigez les problèmes. Avec le temps, vous aurez un bien meilleur contrôle sur votre serveur que si vous réinstallez aveuglément à chaque fois.
 
-## Do backups
+## Faites des sauvegardes
 
-If you host services and data that are important for your users, it is important that you setup a backup policy. Backups can be easily created from the webadmin - you can download it from the webadmin or via your favorite FTP client, such as FileZilla or your own terminal. You should perform backup regularly and keep them in a safe and different physical location from your server. More info on [the backup documentation](/category/backups).
+Si vous hébergez des services et des données qui sont importants pour vos utilisateurs, il est important que vous mettiez en place une politique de sauvegarde. Les sauvegardes peuvent être facilement créées à partir de la webadmin - et les archives peuvent être téléchargées depuis la webadmin, depuis un client FTP comme FileZilla, ou depuis un terminal avec `scp`. Vous devez effectuer régulièrement des sauvegardes et les conserver dans un endroit sûr et physiquement différent de votre serveur. Plus d'infos dans [la documentation des sauvegardes](/category/backup).
 
-## Check root’s email
+## Lisez les emails envoyés à root
 
-As an administrator, you should configure an email client to check emails sent to `root@your.domain.tld` (which should be an alias to the first user your added) or otherwise forward them to another address that you actively check. Those mails may contain information on what is happening on your server such as automated periodic tasks.
+En tant qu'administrateur, vous devriez configurer un client de messagerie pour vérifier les e-mails envoyés à `root@votre.domaine.tld` (qui doit être un alias pour le premier utilisateur que vous avez ajouté) ou les transférer à une autre adresse que vous vérifiez activement. Ces courriels peuvent contenir des informations sur ce qui se passe sur votre serveur, comme les tâches périodiques automatisées.
 
-## YunoHost is free software, maintained by volunteers
+## YunoHost est un logiciel gratuit, maintenu par des bénévoles
 
-Finally, keep in mind that YunoHost is a free software maintained by volunteers - and that the goal of YunoHost (to democratize self-hosting) is not an easy one! It is provided without any warranty. The team of volunteers does its best to maintain and provide the best possible experience - yet features, applications and YunoHost as a whole are far from being perfect and you will experience small and big shortcomings at some points. When this happens, kindly [reach for help on the chat or forum, or report the issue](/community/help)! :)
+Enfin, gardez à l'esprit que YunoHost est un logiciel libre maintenu par des volontaires - et que le but de YunoHost (démocratiser l'auto-hébergement) n'est pas simple ! Le logiciel est fourni sans aucune garantie. L'équipe de bénévoles fait de son mieux pour maintenir et fournir la meilleure expérience possible - pourtant les fonctionnalités, les applications et YunoHost dans son ensemble sont loin d'être parfaits et vous ferez face tôt ou tard à de petit ou gros problèmes. Lorsque cela se produit, venez gentiment [demander de l'aide sur le chat ou le forum, ou signaler le problème](/community/help) :) !
 
-If you like YunoHost and want to see the project being kept alive and make progress, feel free to leave a thank you note and to [donate](https://liberapay.com/YunoHost) to the project and talk about it around you!
+Si vous aimez YunoHost et que vous voulez que le projet soit maintenu en vie et progresse, n'hésitez pas à laisser une note de remerciement et à [faire un don](https://liberapay.com/YunoHost) au projet et à en parler autour de vous !
 
-Last but not least, since YunoHost is a free software project, you are legitimate and welcomed to come and [contribute](/contribute/) to the project, be it on the technical aspects (i.e. code) and less-technical aspects (such as contributing to this documentation! ;))
+Pour finir, puisque YunoHost est un projet de logiciel libre, vous êtes légitime et bienvenu pour [venir contribuer](/contribute) au projet, que ce soit sur les aspects techniques (c.-à-d. code) et moins techniques (comme par exemple contribuer à cette documentation ;)) !
