reuse translations: ssh and command line

--- a/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
@@ -5,7 +5,7 @@ title: SSH and command line
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-## What's SSH?
+## Was ist SSH?
 
 **SSH** stands for Secure Shell, and refers to a protocol that allows to remotely control and administer a machine using the command line interface (CLI). It is available by default in any terminal on GNU/Linux and macOS. On Windows, you may want to use [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (after launching it, click on Session then SSH).
 
