--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
@@ -5,29 +5,28 @@ title: SSH and command line
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-## What's SSH?
+## Cos'è SSH?
 
-**SSH** stands for Secure Shell, and refers to a protocol that allows to remotely control and administer a machine using the command line interface (CLI). It is available by default in any terminal on GNU/Linux and macOS. On Windows, you may want to use [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (after launching it, click on Session then SSH).
+**SSH** sta per Secure Shell, un protocollo che permette di controllare da remoto un computer usando l'interfaccia a linea di comando (command line interface, CLI in inglese). È disponibile di default in ogni emulazione di terminale su GNU/Linux e macOS. Su Windows è possibile usare [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (dopo averlo avviato si deve cliccare su Session e poi SSH).
 
-The command line interface (CLI) is, in the computer world, the original (and more technical) way of interacting with a computer compared to graphical interface. Command line interfaces are generally said to be more complete, powerful or efficient than a graphical interface, though also more difficult to learn.
+## Durante l'installazione di YunoHost
 
-## How to connect
-### Login credentials
+### Individuare il proprio IP
 
 <Tabs>
 <TabItem value="before-postinstall" label="Before running the initial configuration (post-installation)" default>
 
-- If you are **installing at home**, the default credentials are login: `root` and password: `yunohost` (or `1234` if you flashed an armbian image)
-- If you are **installing a remote server (VPS)**, your provider should have communicated you the login and password (or allowed you to configure an SSH key)
+Se stai installando su un VPS allora il provider dovrebbe averti indicato il tuo indirizzo IP.
+
+Se stai installando su un computer casalingo (ad esempio un Raspberry Pi o un OLinuXino) devi individuare l'indirizzo IP che è stato attribuito al computer dopo averlo collegato al router. Questi sono alcuni sistemi:
 
 </TabItem>
 <TabItem value="after-postinstall" label="After running the post-installation" default>
 
+### Collegamento
 
-During the postinstall, you've been asked to choose an user and an administration password. This user account allows you to connect to the server through SSH. The password becomes also the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the `admin` user is unusable).
-
-:::tip
-If you connected with the administration account and would like to become `root` for convenience (e.g. to avoid typing `sudo` in front of every command), you can become `root` using the command `sudo su` or `sudo -i`.
+:::info
+Questa sezione deve essere riscritta, ora l'utente `admin` non esiste più ed è sostituito dal gruppo `admins`.
 :::
 
 </TabItem>
