--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
@@ -1,95 +1,96 @@
 ---
-title: SSH and command line
+title: SSH et la ligne de commande
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-## What's SSH?
+## Qu’est-ce que SSH ?
 
-**SSH** stands for Secure Shell, and refers to a protocol that allows to remotely control and administer a machine using the command line interface (CLI). It is available by default in any terminal on GNU/Linux and macOS. On Windows, you may want to use [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (after launching it, click on Session then SSH).
+**SSH** est un acronyme pour Secure Shell, et désigne un protocole qui permet de contrôler et administrer à distance une machine via la ligne de commande (CLI). C'est aussi une commande disponible de base dans les terminaux de GNU/Linux et macOS. Sous Windows, il vous faudra utiliser le logiciel [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (après l'avoir lancé, cliquer sur Session puis SSH).
 
-The command line interface (CLI) is, in the computer world, the original (and more technical) way of interacting with a computer compared to graphical interface. Command line interfaces are generally said to be more complete, powerful or efficient than a graphical interface, though also more difficult to learn.
+L'interface en ligne de commande (CLI) est, en informatique, la manière originale (et plus technique) d'interagir avec un ordinateur, comparée aux interfaces graphiques. La ligne de commande est généralement considérée comme plus complète, puissante et efficace que les interfaces graphiques, bien que plus difficile à apprendre.
 
-## How to connect
-### Login credentials
+## Comment se connecter ?
+
+### Identifiant à utiliser
 
 <Tabs>
 <TabItem value="before-postinstall" label="Before running the initial configuration (post-installation)" default>
 
-- If you are **installing at home**, the default credentials are login: `root` and password: `yunohost` (or `1234` if you flashed an armbian image)
-- If you are **installing a remote server (VPS)**, your provider should have communicated you the login and password (or allowed you to configure an SSH key)
+- Si vous faites une **installation à la maison**, les identifiants par défaut sont login: `root`, mot de passe: `yunohost` (ou `1234` si vous partez d'une image armbian).
+- Si vous faites une **installation sur un serveur distant (VPS)**, votre fournisseur devrait vous avoir communiqué le login et le mot de passe (ou vous proposer de configurer une clé SSH).
 
 </TabItem>
 <TabItem value="after-postinstall" label="After running the post-installation" default>
 
-
-During the postinstall, you've been asked to choose an user and an administration password. This user account allows you to connect to the server through SSH. The password becomes also the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the `admin` user is unusable).
+Durant la post-installation, vous avez défini un compte et un mot de passe d'administration. Le compte défini lors de la post-installation vous permet de vous connecter en SSH. De plus, le mot de passe défini dans la post-installation devient le nouveau mot de passe pour l'utilisateur `root`. Enfin, **la connexion en SSH avec l'utilisateur `root` est désactivée et il vous faut utiliser le compte défini durant la post-installation !**. L'exception à cette règle est qu'il reste possible de se logger en root *depuis le réseau local - ou depuis une console en direct sur la machine* (ce qui peut être utile dans l'éventualité où le serveur LDAP est inactif et l'utilisateur admin ne fonctionne plus).
 
 :::tip
-If you connected with the administration account and would like to become `root` for convenience (e.g. to avoid typing `sudo` in front of every command), you can become `root` using the command `sudo su` or `sudo -i`.
+Si vous êtes connecté en tant avec le compte d'administration et souhaitez devenir `root` pour plus de confort (par exemple, ne pas avoir à taper `sudo` à chaque commande), vous pouvez devenir `root` en tapant `sudo su` ou `sudo -i`.
 :::
 
 </TabItem>
 </Tabs>
 
-### Address to use
+### Adresse à utiliser
 
-If you are **installing at home** (e.g. on a Raspberry Pi or OLinuXino or old computer):
+Si vous hébergez votre serveur **à la maison** (par ex. Raspberry Pi ou OLinuXino ou vieil ordinateur)
 
-- you should be able to connect to your server using `yunohost.local` (or `yunohost-2.local`, depending on how many servers are on your network).
-- if `yunohost.local` and the like do not work, your need to [find out the local IP of the server](/install/post_install/finding_the_local_ip).
-- if you installed a server at home but are attempting to connect from outside your local network, make sure port 22 is correctly forwarded to your server.
+- vous devriez pouvoir vous connecter à la machine en utilisant `yunohost.local` (ou `yunohost-2.local`, selon le nombre de serveurs sur le réseau).
+- si `yunohost.local` et consorts ne fonctionnent pas, il vous faut [trouver l'IP locale de votre serveur](/install/post_install/finding_the_local_ip).
+- si vous avez installé votre serveur à la maison mais essayez d'y accéder depuis l'extérieur du réseau local, assurez-vous d'avoir bien configuré une redirection de port pour le port 22.
 
-If your server is a remote server (VPS), your provider should have communicated you the IP address of the machine
+S'il s'agit d'une machine distante (VPS), votre fournisseur devrait vous avoir communiqué l'IP de votre machine.
 
-In any cases, if you already configured a domain name pointing to the appropriate IP, it's much better to use `your.domain.tld` instead of the IP address.
+Dans tous les cas, si vous avez déjà configuré un nom de domaine qui pointe sur l'IP appropriée, il est plus pratique d'utiliser `votre.domaine.tld` plutôt que l'adresse IP.
 
-### Connecting
+### Se connecter
 
-The SSH command typically looks like:
+Ci-dessous quelques exemples de commande SSH typiques :
 
 ```bash
-# before the postinstall:
+# avant la postinstall:
 ssh root@11.22.33.44
 
-# or after the postinstall:
+# après la postinstall:
 ssh username@11.22.33.44
 
-# using the domain name instead of the IP (more convenient)
-ssh username@your.domain.tld
+# avec le nom de domaine plutôt que l'IP (plus pratique):
+ssh username@votre.domaine.tld
 
-# using the local domain name instead of the IP (for local access)
+# avec le nom de domaine spécial yunohost.local:
 ssh username@yunohost.local
 
-# if you changed the SSH port
-ssh -p 2244 username@your.domain.tld
+# si vous avez changé le numéro de port pour SSH 
+ssh -p 2244 username@votre.domaine.tld
 ```
+
 :::note
-`fail2ban` will ban your IP for 10 minutes if you perform 10 failed login attempts. If you need to unban the IP, have a look at the page about [Fail2Ban](/administer/troubleshooting/fail2ban)
+`fail2ban` bannira votre IP pendant 10 minutes si vous échouez plus de 10 fois à vous identifier. Pour débannir une IP, vous pouvez regarder la page sur [Fail2Ban](/administer/troubleshooting/fail2ban).
 :::
 
-## Which other users may connect to the server?
+## Autoriser un utilisateur YunoHost standard
 
-By default, only YunoHost users in the `admins` group can log in to YunoHost's SSH and SFTP servers. Non-admin YunoHost users can't connect via SSH for security reasons. With the permissions system it is possible to specifically grant SFTP or even SSH access to non-admin users.
+Par défaut, seuls les comptes dans le groupe `admins` peuvent se connecter en SSH et SFTP sur une instance YunoHost. Les comptes hors de ce groupe ne peuvent se connecter pour des raisons de sécurité. Avec le système de permissions il est possible d'autoriser la connexion en SFTP ou si c'est vraiment nécessaire en SSH.
 
 :::caution
-Be careful who you give SSH access to. This increases even more the attack surface available to a malicious user.
+Faites attention à qui vous donnez accès à SSH. Cela augmente encore plus la surface d'attaque disponible pour un utilisateur malveillant.
 :::
 
 <Tabs>
 <TabItem value="web" label="From the web interface">
 
-Go to `Users > Manage groups and permissions`.
+Se rendre dans `Utilisateurs > Gérer les groupes et les autorisations`
 
-From here, you can add SFTP or SSH permissions to any user or group.
+À partir de là, il est possible d'ajouter les permissions SFTP ou SSH à un utilisateur ou un groupe au choix.
 
-If you want to add an SSH public key to the user, you have to do it from the command line, as the web interface does not yet offer this feature.
+Si vous souhaitez ajouter une clé publique SSH à l'utilisateur, vous devez le faire en ligne de commande, l'interface web ne proposant pas encore cette fonctionnalité.
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-To allow a user or group to access via SFTP or SSH:
+Pour autoriser un utilisateur ou un groupe à accéder en SFTP ou en SSH :
 
 ```bash
 # SFTP
@@ -98,7 +99,7 @@ yunohost user permission add sftp <username>
 yunohost user permission add ssh <username>
 ```
 
-To remove permission:
+Pour enlever la permission :
 
 ```bash
 # SFTP
@@ -107,7 +108,7 @@ yunohost user permission remove sftp <username>
 yunohost user permission remove ssh <username>
 ```
 
-Finally, it is possible to add, delete and list SSH keys, to improve SSH access security, using the commands:
+Enfin, il est possible d'ajouter, de supprimer et de lister des clés SSH, pour améliorer la sécurité de l'accès SSH, avec les commandes :
 
 ```bash
 yunohost user ssh add-key <username> <key>
@@ -118,30 +119,30 @@ yunohost user ssh list-keys <username>
 </TabItem>
 </Tabs>
 
-## Security and SSH
+## SSH et sécurité
 
-A more extensive discussion about security & SSH can be found on the [dedicated page](/administer/tutorials/security).
+Une discussion plus complète sur la sécurité de SSH peut être trouvée sur [la page dédiée](/security).
 
-## The command line
+## La ligne de commande
 
 :::info
-Providing a full tutorial about the command line is quite beyond the scope of the YunoHost documentation : for this, consider reading a dedicated tutorial such as [this one](https://ryanstutorials.net/linuxtutorial/) or [this one](http://linuxcommand.org/). But be reassured that you don't need to be a CLI expert to start using it !
+Fournir un tutoriel complet sur la ligne de commande est bien au-delà du cadre de la documentation de YunoHost : pour cela, référez-vous à des tutoriels comme [celui-ci](https://doc.ubuntu-fr.org/tutoriel/console_ligne_de_commande) ou [celui-ci (en)](http://linuxcommand.org/). Mais soyez rassuré, il n'y a pas besoin d'être un expert pour commencer à l'utiliser !
 :::
 
-### The `yunohost` command
+### La commande `yunohost`
 
-The `yunohost` command can be used to administer your server and perform the various actions similarly to what you do on the webadmin. The command must be launched either from the `root` user or from the `admin` user by preceeding them with `sudo`. (ProTip™ : you can become `root` with the command `sudo su` as `admin`).
+La commande `yunohost` peut être utilisée pour administrer votre serveur ou réaliser les mêmes actions que celles disponibles sur la webadmin. Elle doit être lancée depuis l'utilisateur `root`, ou bien depuis l'utilisateur `admin` en précédant la commande de `sudo`. (ProTip™ : il est possible de devenir `root` via la commande `sudo su` en tant qu'`admin`.)
 
-YunoHost commands usually have this kind of structure :
+Les commandes YunoHost ont ce type de structure :
 
 ```text
 yunohost app install wordpress --label Webmail
           ^    ^        ^             ^
           |    |        |             |
-    category  action  argument      options
+   catégorie  action  argument     options
 ```
 
-Don't hesitate to browse and ask for more information about a given category or action using the the `--help` option. For instance, those commands :
+N'hésitez pas à naviguer et demander des informations à propos d'une catégorie ou action donnée via l'option `--help`. Par exemple, ces commandes :
 
 ```bash
 yunohost --help
@@ -149,13 +150,13 @@ yunohost user --help
 yunohost user create --help
 ```
 
-will successively list all the categories available, then the actions available in the `user` category, then the usage of the action `user create`. You might notice that the YunoHost command tree is built with a structure similar to the YunoHost admin pages.
+vont successivement lister toutes les catégories disponibles, puis les actions de la catégorie `user`, puis expliquer comment utiliser l'action `user create`. Vous devriez remarquer que l'arbre des commandes YunoHost suit une structure similaire aux pages de la webadmin.
 
-### The `yunopaste` command
+### La commande `yunopaste`
 
-This command allow you to share with an other person the output of a command.
+Cette commande est utile lorsque vous voulez communiquer à une autre personne le retour d'une commande.
 
-Example:
+Exemple :
 
 ```bash
 yunohost diagnosis show | yunopaste
@@ -169,21 +170,21 @@ This command is only available if you have the `VPN Client` application installe
 ynh-vpnclient-loadcubefile.sh -u <username> -p <password> -c <path>.cube
 ```
 
-### Some useful commands
+### Quelques commandes utiles
 
-If your administration web interface indicates that the API is unreachable, try starting `yunohost-api`:
+Si votre interface web d'administration indique que l'API est injoignable, essayez de démarrer `yunohost-api` :
 
 ```bash
 systemctl start yunohost-api
 ```
 
-If you can no longer connect with the user `admin` via SSH and via the web interface, the `slapd` service may be down, try restarting it:
+Si vous ne parvenez plus à vous connecter avec l'utilisateur `admin` via SSH et via l'interface web, le service `slapd` est peut-être éteint, essayez de le redémarrer :
 
 ```bash
 systemctl restart slapd
 ```
 
-If you have manually modified configurations and want to know the changes:
+Si vous avez des configurations modifiées manuellement et souhaitez connaître les modifications :
 
 ```bash
 yunohost tools regen-conf --with-diff --dry-run
